c++ options